Fix the h1 Header not being centered on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,13 +93,16 @@
 	font-family: "Michroma";
 	font-weight: normal;
 	font-size: 3rem;
+	/* font-size: 6vw; */
 	color: white;
+	text-align: center;
 
 	margin-bottom: 0.5em;
 }
 
 .description {
 	font-size: 0.8rem;
+	/* font-size: 1.4vw; */
 	color: white;
 }
 
